--- a/index.html
+++ b/index.html
@@ -79,11 +79,11 @@
                 <section class="awards">
                     <h1>Awards</h1>
                     <div class="awardsLogos">
-                        <div class="awardsImg awards01"></div>
-                        <div class="awardsImg awards02"></div>
-                        <div class="awardsImg awards03"></div>
-                        <div class="awardsImg awards04"></div>
-                        <div class="awardsImg awards05"></div>
+                        <div class="awardsImg awards01"><img src="images/awards_acp.jpg"></div>
+                        <div class="awardsImg awards02"><img src="images/awards_studentmedia.jpg"></div>
+                        <div class="awardsImg awards03"><img src="images/awards_cmbam.png"></div>
+                        <div class="awardsImg awards04"><img src="images/awards_spj.png"></div>
+                        <div class="awardsImg awards05"><img src="images/awards_utahpress.png"></div>
                     </div>
                 </section>
             </div>
