--- a/index.html
+++ b/index.html
@@ -74,10 +74,12 @@
 
 
 
-        <div class="backgrounds awards">
+        <div class="backgrounds awardsbg">
             <div class="content">
                 <section class="awards">
-                    <h1>Awards</h1>
+                    <div class="awardsHeading">
+                        <h1>Awards</h1>
+                    </div>
                     <div class="awardsLogos">
                         <div class="awardsImg awards01"><img src="images/awards_acp.jpg"></div>
                         <div class="awardsImg awards02"><img src="images/awards_studentmedia.jpg"></div>
@@ -94,10 +96,10 @@
 
 
 
-        <div class="backgrounds skills">
+        <div class="backgrounds skillsbg">
             <div class="content">
                 <section class="skills">
-                    <h1>Skills</h1>
+                    <h1 class="skillsHeading">Skills</h1>
                     <div class="skillsGroup">
                         <div class="visual">
                             <h2>Visual</h2>
