workin gon the work section

--- a/index.html
+++ b/index.html
@@ -161,24 +161,24 @@
                     <h1>Work</h1>
                     <div class="projects">
                         <div class= "project01">
-                            <div clss="projectImage"><img src="images/work_project01.png"></div>
-                            <div class="projectText">
+                            <div clss="projectImage project01img"><img src="images/work_project01.png" ></div>
+                            <div class="projectText project01txt">
                                 <h2>UX Redesign: Citadel Colour App</h2>
                                 <p>Citadel Colour App is designed for Warhammer and other mini hobbyists who enjoy painting. This app allows users to search and save their favorite paints into their inventories or wishlist. The idea is amazing, but the interface was not. </p>
                                 <button type="button1" class="button1">View Project</button>
                             </div>
                         </div>
                         <div class= "project02">
-                            <div clss="projectImage"><img src="images/work_project02.png"></div>
-                            <div class="projectText">
+                            <div clss="projectImage project02img"><img src="images/work_project02.png"></div>
+                            <div class="projectText project02txt" width="400px">
                                 <h2>UI RWD Redesign: Utah's Drivers License Division</h2>
                                 <p>Everyone hates going to the DMV, let’s not make everyone mad by having to just go online to their site too! Redesigning these sites can be hard, but we believe we solved a lot of their issues. Now people won’t have to struggle before going to the DMV. </p>
                                 <button type="button1" class="button1">View Project</button>
                             </div>
                         </div>
                         <div class= "project03">
-                            <div clss="projectImage"><img src="images/work_project03.png"></div>
-                            <div class="projectText">
+                            <div clss="projectImage project03img"><img src="images/work_project03.png"></div>
+                            <div class="projectText project03txt">
                                 <h2>UI RWD Redesign: Pioneer Theatre Compnay</h2>
                                 <p>Musicals, plays… and dog toys? This site was confusing to look at. Face masks and dog toys were featured more on the homepage than their plays! This needed to be fixed, as well as adding an online payment system so both young and old could enjoy the theatre! </p>
                                 <button type="button1" class="button1">View Project</button>
