--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
                         <nav class="menu">
                             <ul>
                                 <li class="logo" id="logo"><img src="images\sav_logo_purple.svg" alt="Savannah Nyre Logo" width="100"></li>
-                                <li class="item">Portfolio</li>
-                                <li class="item">About</li>
-                                <li class="item">Contact</li>
-                                <li class="item">Download Resume</li>
+                                <li class="item"><a href="#work">Portfolio</a></li>
+                                <li class="item"><a href="#aboutMe">About</a></li>
+                                <li class="item"><a href="#getInTouch">Contact</a></li>
+                                <li class="item"><a href="" download>Download Resume</a></li>
                             </ul>
                         </nav>
                     </div>               
@@ -34,7 +34,7 @@
 
 
         <div class="backgrounds herocolor">
-            <div class="content">
+            <div class="content" id="heroImg">
                 <section class="heroImg"> 
                     <div class="heroGrid">
                         <img src="images\sav_logo_pink.svg" alt="Savannah Nyre Logo" width="500" class="heroLeft">
@@ -51,12 +51,12 @@
 
 
         <div class="backgrounds about">
-            <div class="content">
+            <div class="content" id="aboutMe">
                 <section class="aboutMe">
                     <div class="aboutMeMain topRow leftContent">
                         <h1>ABOUT ME</h1>
                         <p>I enjoy designing responsive websites and prototyping them! I am skilled in the Adobe Suite, HTML & CSS, and Figma. I have great time-management and organizational skills. I am a design professional with a Bachelor of Fine Art (BFA) focused in Graphic Design, from Utah State University and have completed a User Experience and User Interface Design Bootcamp from the University of Utah.</p>
-                        <button type="button1" class="button1">Download Resume</button>
+                        <button type="button1" class="button1"><a href="" download>Download Resume</a></button>
                     </div>
                     <div class="aboutMeSecondary topRow rightContent">
                         <h6>LOCATED</h6>
@@ -75,7 +75,7 @@
 
 
         <div class="backgrounds awardsbg">
-            <div class="content">
+            <div class="content" id="awards">
                 <section class="awards">
                     <div class="awardsHeading">
                         <h1>Awards</h1>
@@ -97,7 +97,7 @@
 
 
         <div class="backgrounds skillsbg">
-            <div class="content">
+            <div class="content" id="skills">
                 <section class="skills">
                     <h1 class="skillsHeading">Skills</h1>
                     <div class="skillsGroup">
@@ -156,32 +156,32 @@
 
 
         <div class="backgrounds workbg">
-            <div class="content">
+            <div class="content" id="work">
                 <section class="work">
                     <h1>Work</h1>
                     <div class="projects">
                         <div class= "project01">
-                            <div clss="projectImage project01img"><img src="images/work_project01.png" ></div>
+                            <div clss="projectImage project01img"><img src="images/work_project01_lg.png"></div>
                             <div class="projectText project01txt">
                                 <h2>UX Redesign: Citadel Colour App</h2>
                                 <p>Citadel Colour App is designed for Warhammer and other mini hobbyists who enjoy painting. This app allows users to search and save their favorite paints into their inventories or wishlist. The idea is amazing, but the interface was not. </p>
-                                <button type="button1" class="button1">View Project</button>
+                                <button type="button1" class="button1"><a href="project01.html">View Project</a></button>
                             </div>
                         </div>
                         <div class= "project02">
-                            <div clss="projectImage project02img"><img src="images/work_project02.png"></div>
+                            <div clss="projectImage project02img"><img src="images/work_project02_lg.png"></div>
                             <div class="projectText project02txt" width="400px">
                                 <h2>UI RWD Redesign: Utah's Drivers License Division</h2>
                                 <p>Everyone hates going to the DMV, let’s not make everyone mad by having to just go online to their site too! Redesigning these sites can be hard, but we believe we solved a lot of their issues. Now people won’t have to struggle before going to the DMV. </p>
-                                <button type="button1" class="button1">View Project</button>
+                                <button type="button1" class="button1"><a href="project02.html">View Project</a></button>
                             </div>
                         </div>
                         <div class= "project03">
-                            <div clss="projectImage project03img"><img src="images/work_project03.png"></div>
+                            <div clss="projectImage project03img"><img src="images/work_project_03_lg.png"></div>
                             <div class="projectText project03txt">
                                 <h2>UI RWD Redesign: Pioneer Theatre Compnay</h2>
                                 <p>Musicals, plays… and dog toys? This site was confusing to look at. Face masks and dog toys were featured more on the homepage than their plays! This needed to be fixed, as well as adding an online payment system so both young and old could enjoy the theatre! </p>
-                                <button type="button1" class="button1">View Project</button>
+                                <button type="button1" class="button1"><a href="project03.html">View Project</a></button>
                             </div>
                         </div>
                     </div>
@@ -195,7 +195,7 @@
 
 
         <div class="backgrounds fancyfooter">
-            <div class="content">
+            <div class="content" id="getInTouch">
                 <section class="getInTouch">
                     <h1 class= "touchTop">LET'S GET IN TOUCH!</h1>
                     <div class="inTouchLeft">
@@ -211,9 +211,9 @@
                             <img>
                         </div>
                         <div class="buttonLayout">
-                            <button type="button" class="button2">DOWNLOAD RESUME</button>
-                            <button type="button" class="button2">UX/UI PORTFOLIO</button>
-                            <button type="button" class="button2">DESIGN PORTFOLIO</button>
+                            <button type="button" class="button2"><a href="" download>DOWNLOAD RESUME</a></button>
+                            <button type="button" class="button2"><a href="">UX/UI PORTFOLIO</a></button>
+                            <button type="button" class="button2"><a href="">DESIGN PORTFOLIO</a></button>
                         </div>
                     </div>
                 </section>
