working on navbar

--- a/index_nogo.html
+++ b/index_nogo.html
@@ -2,8 +2,12 @@
 
 <html>
     <head>  
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+       
         <title>Savannah Nyre Portfolio</title>
-        <link href="css/styles2.css" rel="stylesheet">
+        
+        <link href="css/styles_nogo.css" rel="stylesheet">
     </head>
     <body>
 
@@ -21,7 +25,7 @@
                                 <li class="item"><a href="#work">Portfolio</a></li>
                                 <li class="item"><a href="#aboutMe">About</a></li>
                                 <li class="item"><a href="#getInTouch">Contact</a></li>
-                                <li class="item"><a href="" download>Download Resume</a></li>
+                                <li class="item"><a href="index3.html">Download Resume</a></li>
                             </ul>
                         </nav>
                     </div>               
