--- a/citadelcolour.html
+++ b/citadelcolour.html
@@ -12,7 +12,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Montserrat" rel="stylesheet">
         <link href="css/styles.css" rel="stylesheet">
-        <link href="css/projects.css" rel="stylesheet">
+        <link href="css\projects.css" rel="stylesheet">
 
 
     </head>
