--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
                                     <img>
                                 </div>
                                 <div class="buttonLayout">
-                                    <button type="button" class="button2"><a href="" download>DOWNLOAD RESUME</a></button>
+                                    <button type="button" class="button2"><a href="images\2021_personal_indentity_resumeindd.pdf" download>DOWNLOAD RESUME</a></button>
                                     <button type="button" class="button2"><a href="">UX/UI PORTFOLIO</a></button>
                                     <button type="button" class="button2"><a href="">DESIGN PORTFOLIO</a></button>
                                 </div>
