--- a/index.html
+++ b/index.html
@@ -280,9 +280,18 @@
                                 <div class="text">
                                     <p><strong>EMAIL ME:</strong>       savnyre@gmail.com</p>
                                     <p><strong>FIND ME ON SOCIAL</strong></p>
-                                    <img>
-                                    <img>
-                                    <img>
+                                    <!-- <div class="facebook">
+                                       <a href=""><img src="images/facebook-1.png" alt="facebook purple"></a> 
+                                       <a href=""><img src="images/Group 25.png" class="img-top" alt="facebook yellow"></a>
+                                    </div> -->
+                                    <div class="instagram">
+                                        <a href="https://www.instagram.com/savnyre/" target="_blank"><img src="images/instagram-1.png" alt="instagram purple"></a>
+                                        <a href="https://www.instagram.com/savnyre/" target="_blank"><img src="images/Group 24.png" class="img-top" alt="instagram yellow"></a>
+                                    </div>
+                                    <div class="linkedin">
+                                        <a href="https://www.linkedin.com/in/savannah-nyre-61a138ba/" target="_blank"><img src="images/linkedin-1.png" alt="linkedin purple"></a>
+                                        <a href="https://www.linkedin.com/in/savannah-nyre-61a138ba/" target="_blank"><img src="images/Group 26.png" class="img-top" alt="linkedin yellow"></a>
+                                    </div>
                                 </div>
                                 <div class="buttonLayout">
                                     <button type="button" class="button2"><a href="images\2021_personal_indentity_resumeindd.pdf" download>DOWNLOAD RESUME</a></button>
@@ -307,6 +316,8 @@
                     <div>
                         <p>2021 SAVANNAH NYRE   |    PORTFOLIO</p>
                     </div>
+                    <div class="sources">Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
+
                 </div>
             </div>
 
