--- a/index.html
+++ b/index.html
@@ -273,8 +273,8 @@
                         <div class="row  g-5 py-5">
                             <h1 class= "touchTop">LET'S GET IN TOUCH!</h1>
                             <div class="inTouchLeft col-10 col-sm-8 col-lg-6">
-                                <img src="images\sav_logo_purple.svg" alt="Savannah Nyre Logo" width="300" class="mx-lg-auto img-fluid">
-                                <p>SAVANNAH HOPE NYRE</p>
+                                <a href="index.html"><img src="images\sav_logo_purple.svg" alt="Savannah Nyre Logo" width="300" class="mx-lg-auto img-fluid">
+                                </a>                                <p>SAVANNAH HOPE NYRE</p>
                             </div>
                             <div class="inTouchRight col-lg-4">
                                 <div class="text">
