--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
 
 
         <div class="backgrounds herocolor">
+            
             <div class="content" id="heroImg">
                 <section class="heroImg container col-xxl-8 px-4 py-5"> 
                     <div class="heroGrid row flex-lg-row align-items-center g-5 py-5">
@@ -73,6 +74,7 @@
                     </div>
                 </section>
             </div>
+            <img src="images/citadelimages/mockup.png">
         </div>
         
 
