--- a/utahdld.html
+++ b/utahdld.html
@@ -64,11 +64,11 @@
     
 
 
-        <div class="backgrounds herocolor"  >
+        <div class="backgrounds herocolor citadelhero d-flex justify-content-start align-items-center" style="background-image: url('images/pioneerimages/heroimages.png;'); height: 50vh;"  >
             <div class="content" id="heroImg" >
                 <section class="heroImg container col-xxl-8 px-4 py-5"> 
-                    <div class="heroGrid row flex-lg-row align-items-center g-5 py-5">
-                        <div class="heroTextProj col-12 col-sm-12 col-md-12">
+                    <div class="heroGrid row flex-lg-row align-items-center g-5 py-5 ps-5">
+                        <div class="heroTextProj col-12 col-sm-12 col-md-12 ps-5">
                             <h1 class="display-5 fw-bold lh-1  heroTextProj">UI RWD REDESIGN:</h1>
                             <p class="display-5 fw-bold lh-1 heroTextProj">UTAH'S DRIVERS LICENSE DIVISION</p>
                         </div>
