only user test section left!!

--- a/ptcwebsite.html
+++ b/ptcwebsite.html
@@ -64,13 +64,13 @@
     
 
 
-        <div class="backgrounds herocolor citadelhero d-flex justify-content-start align-items-center" style="background-image: url('images/pioneerimages/heroimage.png;'); height: 50vh;"  >
+        <div class="backgrounds herocolor citadelhero d-flex justify-content-start align-items-center" style="background-image: url('images/pioneerimages/heroimage.png'); height: 50vh;"  >
             <div class="content" id="heroImg" >
                 <section class="heroImg container col-xxl-8 px-4 py-5"> 
                     <div class="heroGrid row flex-lg-row align-items-center g-5 py-5 ps-5">
                         <div class="heroTextProj col-12 col-sm-12 col-md-12 ps-5">
                             <h1 class="display-5 fw-bold lh-1  heroTextProj">UI RWD REDESIGN:</h1>
-                            <p class="display-5 fw-bold lh-1 heroTextProj">UTAH'S DRIVERS LICENSE DIVISION</p>
+                            <p class="display-5 fw-bold lh-1 heroTextProj">PIONEER THEATRE COMPANY</p>
                         </div>
                     </div>
                 </section>
