added proven layout 2.0
dsfsa

--- a/citadelcolour.html
+++ b/citadelcolour.html
@@ -49,7 +49,7 @@
                                         <a class="nav-link" href="#getInTouch">Contact</a>
                                     </li>
                                     <li class="nav-item pe-2">
-                                        <a class="nav-link" href="#">Download Resume</a>
+                                        <a class="nav-link" href="images\SavannahNyre_2022_UTResume.pdf" download>Download Resume</a>
                                     </li>
                                 </ul>
                             </div>
@@ -606,9 +606,9 @@
                                     </div>
                                 </div>
                                 <div class="buttonLayout">
-                                    <button type="button" class="button2"><a href="images\2021_personal_indentity_resumeindd.pdf" download>DOWNLOAD RESUME</a></button>
-                                    <button type="button" class="button2"><a href="">UX/UI PORTFOLIO</a></button>
-                                    <button type="button" class="button2"><a href="">DESIGN PORTFOLIO</a></button>
+                                    <button type="button" class="button2"><a href="images\SavannahNyre_2022_UTResume.pdf" download>DOWNLOAD RESUME</a></button>
+                                    <button type="button" class="button2"><a href="#work">UX/UI PORTFOLIO</a></button>
+                                    <button type="button" class="button2"><a href="https://www.savannahnyre.com/"  target="_blank">DESIGN PORTFOLIO</a></button>
                                 </div>
                             </div>
                         </div>
@@ -616,7 +616,6 @@
                 </section>
             </div>
         </div>
-
 
 
 
