--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                                         <a class="nav-link" href="#getInTouch">Contact</a>
                                     </li>
                                     <li class="nav-item pe-2">
-                                        <a class="nav-link" href="#">Download Resume</a>
+                                        <a class="nav-link"  href="images\SavannahNyre_2022_UTResume.pdf" download>Download Resume</a>
                                     </li>
                                 </ul>
                             </div>
@@ -87,7 +87,7 @@
                             <h1>ABOUT ME</h1>
                             <p>I enjoy designing responsive websites and prototyping them! I am skilled in the Adobe Suite, HTML & CSS, and Figma. I have great time-management and organizational skills. I am a design professional with a Bachelor of Fine Art (BFA) focused in Graphic Design, from Utah State University and have completed a User Experience and User Interface Design Bootcamp from the University of Utah.</p>
                             <button type="button" class="button1 btn btn-primary btn-lg">
-                                <a href="" download>Download Resume</a>
+                                <a href="images\SavannahNyre_2022_UTResume.pdf" download>Download Resume</a>
                             </button>
                         </div>
                         <div class="aboutMeSecondary topRow rightContent col-md-4 px-4">
@@ -209,6 +209,24 @@
                         <div class= "project proj01 card bg-transparent" style="max-width: 1900px;">
                             <div class="row g-0">
                                 <div class="projectImage project01img col-lg-6 col-md-6">
+                                    <img src="images\provenlayoutstuff.png" class="img-fluid">
+                                </div>
+                                <div class="col-lg-6 col-md-6 col-sm-12 col-xxl-4">
+                                    <div class="projectText project01txt card-body">
+                                        <h2 class="card-title">UX/UI Proven Layout 2.0</h2>
+                                        <p class="card-text">Oozle Media strives to provide their clients with the best converting website. The web dev team decided our original Proven Layout needed a face lift. </p>
+                                        <button type="button1" class="button1">
+                                            <a href="provenlayout2.html">View Project</a>
+                                        </button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        
+                        <div class= "project proj01 card bg-transparent" style="max-width: 1900px;">
+                            <div class="row g-0">
+                                <div class="projectImage project01img col-lg-6 col-md-6">
                                     <img src="images/work_project01_lg.png" class="img-fluid">
                                 </div>
                                 <div class="col-lg-6 col-md-6 col-sm-12 col-xxl-4">
@@ -295,9 +313,9 @@
                                     </div>
                                 </div>
                                 <div class="buttonLayout">
-                                    <button type="button" class="button2"><a href="images\2021_personal_indentity_resumeindd.pdf" download>DOWNLOAD RESUME</a></button>
-                                    <button type="button" class="button2"><a href="">UX/UI PORTFOLIO</a></button>
-                                    <button type="button" class="button2"><a href="">DESIGN PORTFOLIO</a></button>
+                                    <button type="button" class="button2"><a href="images\SavannahNyre_2022_UTResume.pdf" download>DOWNLOAD RESUME</a></button>
+                                    <button type="button" class="button2"><a href="#work">UX/UI PORTFOLIO</a></button>
+                                    <button type="button" class="button2"><a href="https://www.savannahnyre.com/"  target="_blank">DESIGN PORTFOLIO</a></button>
                                 </div>
                             </div>
                         </div>
