--- a/utahdld.html
+++ b/utahdld.html
@@ -49,7 +49,7 @@
                                         <a class="nav-link" href="#getInTouch">Contact</a>
                                     </li>
                                     <li class="nav-item pe-2">
-                                        <a class="nav-link" href="#">Download Resume</a>
+                                        <a class="nav-link" href="images\SavannahNyre_2022_UTResume.pdf" download>Download Resume</a>
                                     </li>
                                 </ul>
                             </div>
@@ -590,8 +590,7 @@
                             <h1 class= "touchTop">LET'S GET IN TOUCH!</h1>
                             <div class="inTouchLeft col-10 col-sm-8 col-lg-6">
                                 <a href="index.html"><img src="images\sav_logo_purple.svg" alt="Savannah Nyre Logo" width="300" class="mx-lg-auto img-fluid">
-                                </a>
-                                    <p>SAVANNAH HOPE NYRE</p>
+                                </a>                                <p>SAVANNAH HOPE NYRE</p>
                             </div>
                             <div class="inTouchRight col-lg-4">
                                 <div class="text">
@@ -611,9 +610,9 @@
                                     </div>
                                 </div>
                                 <div class="buttonLayout">
-                                    <button type="button" class="button2"><a href="images\2021_personal_indentity_resumeindd.pdf" download>DOWNLOAD RESUME</a></button>
-                                    <button type="button" class="button2"><a href="">UX/UI PORTFOLIO</a></button>
-                                    <button type="button" class="button2"><a href="">DESIGN PORTFOLIO</a></button>
+                                    <button type="button" class="button2"><a href="images\SavannahNyre_2022_UTResume.pdf" download>DOWNLOAD RESUME</a></button>
+                                    <button type="button" class="button2"><a href="#work">UX/UI PORTFOLIO</a></button>
+                                    <button type="button" class="button2"><a href="https://www.savannahnyre.com/"  target="_blank">DESIGN PORTFOLIO</a></button>
                                 </div>
                             </div>
                         </div>
