added oozle sites
yay

--- a/index.html
+++ b/index.html
@@ -223,6 +223,22 @@
                             </div>
                         </div>
 
+                        <div class= "project proj01 card bg-transparent" style="max-width: 1900px;">
+                            <div class="row g-0">
+                                <div class="projectImage project01img col-lg-6 col-md-6">
+                                    <img src="images\oozlesites\oozlesitesthumbnail.png" class="img-fluid">
+                                </div>
+                                <div class="col-lg-6 col-md-6 col-sm-12 col-xxl-4">
+                                    <div class="projectText project01txt card-body">
+                                        <h2 class="card-title">UX/UI Oozle Media Clients</h2>
+                                        <button type="button1" class="button1">
+                                            <a href="oozleprojects.html">View Project</a>
+                                        </button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
                         
                         <div class= "project proj01 card bg-transparent" style="max-width: 1900px;">
                             <div class="row g-0">
